[project]
name = "md-exporter"
version = "3.6.9"
description = "A desktop GUI application to convert Markdown files to DOCX, PDF, and HTML formats."
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "bowenliang123", email = "liang.bowen.123@qq.com" },
]

dependencies = [
    "markdown>=3.10.2",
    "pandas[excel,html,xml]~=3.0.1",
    "xhtml2pdf~=0.2.17",
    "reportlab~=4.5.0",
    "pillow~=12.1.1",
    "pypandoc-binary~=1.16.2",
    "tkinterdnd2>=0.4.3",
    "python-docx~=1.1.0",
    "requests~=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[project.urls]
Homepage = "https://github.com/bowenliang123/markdown-exporter/"
Repository = "https://github.com/bowenliang123/markdown-exporter.git"
Issues = "https://github.com/bowenliang123/markdown-exporter/issues"
Changelog = "https://github.com/bowenliang123/markdown-exporter/?tab=readme-ov-file#-changelog"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "md_exporter"
module-root = ""

[tool.uv.build-backend.includes]
assets = "md_exporter/assets/"
