[project]
name = "md-exporter"
version = "3.6.9"
description = "A desktop GUI application to convert Markdown files to DOCX, PDF, and HTML formats."
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "bowenliang123", email = "liang.bowen.123@qq.com" },
]
keywords = ["markdown", "converter", "gui", "docx", "pdf", "html"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "markdown>=3.10.2",
    "pandas[excel,html,xml]~=3.0.1",
    "xhtml2pdf~=0.2.17",
    "reportlab~=4.5.0",
    "pillow~=12.1.1",
    "pypandoc-binary~=1.16.2",
    "tkinterdnd2>=0.4.3",
    "python-docx~=1.1.0",
    "requests~=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[project.urls]
Homepage = "https://github.com/bowenliang123/markdown-exporter/"
Repository = "https://github.com/bowenliang123/markdown-exporter.git"
Issues = "https://github.com/bowenliang123/markdown-exporter/issues"
Changelog = "https://github.com/bowenliang123/markdown-exporter/?tab=readme-ov-file#-changelog"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "md_exporter"
module-root = ""

[tool.uv.build-backend.includes]
assets = "md_exporter/assets/"

[tool.uv]
# Allow direct development dependency on the project itself
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
